--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ yarn-debug.log*
 yarn-error.log*
 firebase-debug.log*
 
+# Files
+.DS_Store
+.firebaserc
+.firebase.json
+
 # Firebase cache
 .firebase/
 
